Solved Issues  1:- Hide cameras with toggle button  2:- Remove scrollbar camera single view page

--- a/app/assets/stylesheets/layout/_page.scss
+++ b/app/assets/stylesheets/layout/_page.scss
@@ -13,7 +13,7 @@
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  padding: 20px 15px;
+  padding: 20px 15px 0;
   overflow: auto;
   margin-right: 0px;
   margin-left: 0px;
